[gd_scene load_steps=20 format=2]

[ext_resource path="res://Art/vending machines.png" type="Texture" id=1]
[ext_resource path="res://Code/Turret/turret.gd" type="Script" id=2]
[ext_resource path="res://Code/Turret/turret_state_manager.gd" type="Script" id=3]
[ext_resource path="res://Code/Turret/turret_attack.gd" type="Script" id=4]
[ext_resource path="res://Code/Turret/turret_idle.gd" type="Script" id=5]
[ext_resource path="res://Code/Properties/entity_detect.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Projectiles/WaterProjectile.tscn" type="PackedScene" id=7]
[ext_resource path="res://Code/Turret/turret_empty_state.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 4 )

[sub_resource type="Animation" id=5]
resource_name = "Attack"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "Empty"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "Attack"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "Empty"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "Idle"

[sub_resource type="AnimationNodeStateMachine" id=3]
states/Attack/node = SubResource( 7 )
states/Attack/position = Vector2( 324, 144 )
states/Empty/node = SubResource( 10 )
states/Empty/position = Vector2( 736, 144 )
states/Idle/node = SubResource( 8 )
states/Idle/position = Vector2( 520, 144 )
start_node = "Idle"
graph_offset = Vector2( 53, 19 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=4]

[sub_resource type="CircleShape2D" id=2]
radius = 88.0

[node name="Turret" type="StaticBody2D"]
collision_layer = 8
collision_mask = 8
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
Projectile = ExtResource( 7 )
maxAmmo = 10
cooldown = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 12 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 5 )
anims/Empty = SubResource( 9 )
anims/Idle = SubResource( 6 )
anims/RESET = SubResource( 11 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 3 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 2
vframes = 2
frame = 1

[node name="FireRateTimer" type="Timer" parent="."]
one_shot = true

[node name="FirePoint" type="Position2D" parent="."]
position = Vector2( 0, 13 )

[node name="AttackRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource( 2 )

[node name="StateManager" type="Node" parent="."]
script = ExtResource( 3 )
starting_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateManager"]
script = ExtResource( 5 )
animation_name = "Idle"
attack_node = NodePath("../Attack")

[node name="Attack" type="Node" parent="StateManager"]
script = ExtResource( 4 )
animation_name = "Attack"
idle_node = NodePath("../Idle")
empty_node = NodePath("../Empty")
turret_range = NodePath("../../AttackRange")

[node name="Empty" type="Node" parent="StateManager"]
script = ExtResource( 8 )
animation_name = "Empty"
attack_node = NodePath("../Attack")

[connection signal="body_entered" from="AttackRange" to="AttackRange" method="_on_AttackRange_body_entered"]
[connection signal="body_exited" from="AttackRange" to="AttackRange" method="_on_AttackRange_body_exited"]
